@@ -34,6 +34,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   b - fix cput job status
   b - Fix "Spool Job Race condition"
   b - fix bison syntax error in Parser.y
+  f - new mom configs: $auto_ideal_load and $auto_max_load
 
 2.1.2
 
